fixed some issues on mobile devices

--- a/src/styles/post/index.scss
+++ b/src/styles/post/index.scss
@@ -52,6 +52,10 @@
       text-decoration: underline;
     }
   }
+  
+  &__player{
+    text-align: center;
+  }
 
   &__content {
     @include fontNormal(14);
