--- a/src/styles/single/index.scss
+++ b/src/styles/single/index.scss
@@ -17,24 +17,57 @@
 
 }
 
+@media (max-width: 920px) {
+  .singles {
+    margin: 3rem auto 2.4rem;
+    width: calc(95% - 10px);
+    padding: 0.5rem;
+    min-width: unset;
+    grid-template-columns: repeat(2, 1fr);
+
+    &__title {
+      grid-column: 1 / 3;
+    }
+  }
+}
+
+@media (max-width: 420px) {
+  .singles {
+    margin: 3rem auto 2.4rem;
+    width: unset;
+    min-width: unset;
+    padding: 0.5rem;
+
+    display: block;
+
+    &__title {
+      margin-bottom: 1rem;
+      display: block;
+    }
+  }
+}
+
 .single {
   background-image: radial-gradient(circle at center, #ddd 0, #efefef 100%);
-  padding: 5px;
+  padding: 0 0 5px 0;
   box-shadow: 0 0 2.4rem #cdcdcd;
 
   @include card();
 
   &__inner {
     background: #fff;
+    margin: 5px 5px 0 5px;
   }
 
   &__image {
-    clear:both;
-    float:right;
-    margin:1.2rem;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
 
     img {
-
+      max-width: 100%;
+      height: auto;
+      width: auto;
     }
   }
 
